fixed the reset pass feature.

--- a/resetpassword.html
+++ b/resetpassword.html
@@ -30,18 +30,23 @@
                 return decodeURIComponent(results[2].replace(/\+/g, ' '));
             }
       $(document).ready(function() {
-
+        var request;
         $("#reset-form").submit(function(event) {
-      var request;
+
+          // Prevent default posting of form - put here to work in case of errors
+          event.preventDefault();
+          $('.alert').remove();
 
       var form = document.getElementById('reset-form');
       var formData = new FormData(form);
+      formData.append("verifyCode", getParameterByName('key'));
 
-      var code = getParameterByName('key');
           request = $.ajax({
               url: "phpUtils/changeuserpassword.php",
               type: "post",
-              data: { verifyCode : code }
+              data: formData,
+              processData: false,
+              contentType: false
           });
 
           // Callback handler that will be called on success
@@ -52,7 +57,7 @@
               document.getElementById("passSetError").innerHTML = response;
             } else {
               document.getElementById("successblk").style.display = "block";
-              document.getElementById("uploadSection").style.display = "block";
+              document.getElementById("uploadSection").style.display = "none";
             }
           });
     });
@@ -91,21 +96,21 @@
         <h1 class="my-4">
           <small>Reset Password</small>
         </h1>
-            <form id="reset-form"  method="post" enctype="multipart/form-data">
-            <div class="form-group">
-        <label for="pass">Password:</label>
-        <input type="password" class="form-control" name="pass" id="pass" placeholder="Password" required>
+      <form id="reset-form"  method="post" enctype="multipart/form-data">
+        <div class="form-group">
+          <label for="pass">Password:</label>
+          <input type="password" class="form-control" name="pass" id="pass" placeholder="Password" required>
+        </div>
+        <div class="form-group">
+          <label for="comparepass">Re-Enter Password:</label>
+          <input type="password" class="form-control" name="comparepass" id="comparepass" placeholder="Password" required>
+        </div>
+        <br />
+        <button class="btn btn-lg btn-primary" id="uploadAvatar" type="submit">Reset Password</button>
+        <p id="passSetError" style="display:none; color:red;"></p>
+      </form>
       </div>
-      <div class="form-group">
-      <label for="comparepass">Re-Enter Password:</label>
-      <input type="password" class="form-control" name="comparepass" id="comparepass" placeholder="Password" required>
-      </div>
-            <br />
-              <button class="btn btn-lg btn-primary" id="uploadAvatar" type="submit">Reset Password</button>
-              <p id="passSetError" style="display:none; color:red;"></p>
-            </form>
-      </div>
-      <h1 id = "successblk" class="my-4" style = "display:none;">
+      <h1 id = "successblk" class="my-4" style = "color:white; display:none;">
         <small>Password reset, login with your new password.</small>
       </h1>
     <!-- /.container -->
