--- a/verifyEmail.html
+++ b/verifyEmail.html
@@ -74,7 +74,7 @@
 
       <!-- Page Heading -->
       <center>
-      <h1 class="my-4">
+      <h1 class="color:white;" class="my-4">
         <small id="verifyMessage"></small>
       </h1>
     </center>
