getting things up to date

--- a/verifyEmail.html
+++ b/verifyEmail.html
@@ -74,8 +74,8 @@
 
       <!-- Page Heading -->
       <center>
-      <h1 class="my-4">
-        <small id="verifyMessage"></small>
+      <h1 class="color:white;" class="my-4">
+        <small style="color:white;" id="verifyMessage"></small>
       </h1>
     </center>
     <!-- /.container -->
